--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.9.3",
     "firebase-tools": "^11.8.0",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.54.6",
     "web-vitals": "^2.1.4"
