--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@excalidraw/excalidraw": "^0.13.0",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,11 +20,12 @@
     "firebase": "^9.9.3",
     "firebase-tools": "^11.8.0",
     "html-to-draftjs": "^1.5.0",
+    "jodit-react": "^1.3.39",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
