--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ckeditor4-react": "^4.1.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "firebase": "^9.9.3",
+    "firebase": "^9.19.1",
     "firebase-tools": "^11.8.0",
     "html-to-draftjs": "^1.5.0",
     "jodit-react": "^1.3.39",
@@ -25,9 +25,10 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
