--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
+    "react-resizable": "^3.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
